@@ -13,11 +13,11 @@
 				<type>select</type>
 				<items>
 					<n0>
-						<n0>LLL:EXT:mininews/locallang_db.php:tt_content.tx_mininews_frontpage_list.I.0</n0>
+						<n0>LLL:EXT:mininews/locallang_db.xml:tt_content.tx_mininews_frontpage_list.I.0</n0>
 						<n1>ListView</n1>
 					</n0>
 					<n1>
-						<n0>LLL:EXT:mininews/locallang_db.php:tt_content.tx_mininews_frontpage_list.I.1</n0>
+						<n0>LLL:EXT:mininews/locallang_db.xml:tt_content.tx_mininews_frontpage_list.I.1</n0>
 						<n1>FP</n1>
 					</n1>
 				</items>
