@@ -1,3 +1,7 @@
+2006-10-06	Dmitry Dulepov	<typo3@accio.lv>
+
+	* Fixed references to locallang*.php (should be locallang*.xml)
+
 2006-10-02	Dmitry Dulepov	<typo3@accio.lv>
 
 	* Released version 1.0.0
